# opsmith-cli

./: pyproject.toml
opsmith/: agent.py  git_repo.py  main.py  models.py  repo_map.py  types.py
opsmith/deployment_strategies/: base.py  monolithic.py
opsmith/templates/virtual_machine_setup/aws/: main.yml
