[project]
name = "opsmith-cli"
version = "0.4.6b"
description = "Opsmith is an AI devops engineer in your terminal"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "ansible==14.1.0",
    "gitpython==3.1.50",
    "google-api-python-client==2.197.0",
    "google-cloud-compute==1.48.0",
    "google-cloud-resource-manager==1.17.0",
    "google-cloud-storage==3.12.0",
    "grep-ast==0.9.0",
    "inquirer==3.4.1",
    "jinja2==3.1.6",
    "networkx==3.6.1",
    "pick==2.6.0",
    "pydantic==2.13.4",
    "pydantic-ai==1.107.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "tqdm==4.68.3",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==1.9.1",
    "typer==0.26.7",
]

[project.scripts]
opsmith = "opsmith.main:app"

[tool.setuptools]
include-package-data = true

[tool.hatch.build.targets.wheel]
packages = ["opsmith"]

[tool.codespell]
skip = '*.svg'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "boto3-stubs==1.38.36",
]

[tool.black]
line-length = 100
